--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!doctype html>
-<html>
- <body style="backgroud-color:rgb(49, 214, 220);"><center>
-    <head>
-     <title>Docker Project</title>
-    </head>
-    <body>
-     <p>Welcome to my Docker !<p>
-        <p>Today's Date and Time is: <span id='date-time'></span><p>
-        <script>
-             var dateAndTime = new Date();
-             document.getElementById('date-time').innerHTML=dateAndTime.toLocaleString();
-        </script>
-        </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>picloud</title>
+</head>
+<body>
+    <a id="redirectLink" href="https://picloud.ai/pikube"></a>
+ 
+    <script>
+        // Automatically click the anchor tag after the page loads
+        window.onload = function() {
+            document.getElementById("redirectLink").click();
+        }
+    </script>
+</body>
 </html>
